Refactor model group interface